--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "start": "npm run dev",
     "test": "npm run unit",
     "build": "node build/build.js",
-    "unit": "jest"
+    "unit": "jest",
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "express": "^4.16.4",
+    "serve-static": "^1.13.2",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.4",
     "vue-resource": "^1.5.1",
